Add github token

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -34,5 +34,6 @@ jobs:
         # https://github.com/JamesIves/github-pages-deploy-action
         uses: JamesIves/github-pages-deploy-action@v4.4.1
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: public
           folder: out
