--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -28,7 +28,7 @@ jobs:
           npm ci
           npm run build
           npm run export
-          touch out/.nojekyll
+          touch ./out/.nojekyll
 
       - name: Deploy
         # https://github.com/JamesIves/github-pages-deploy-action
