--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.62.1"
   }
 }
